[gd_scene load_steps=8 format=3 uid="uid://bauftp7yteame"]

[ext_resource type="Script" path="res://levels/menu/menu.gd" id="1_qhlr6"]
[ext_resource type="AudioStream" uid="uid://sjxhlnmspqen" path="res://levels/menu/calm_wonder.wav" id="2_8em0r"]
[ext_resource type="PackedScene" uid="uid://dpmiyenwvroof" path="res://globals/assets/ProgressBar.tscn" id="2_atalm"]
[ext_resource type="StyleBox" uid="uid://oq7x8t7fp1jh" path="res://globals/assets/menu_button.tres" id="4_ie4v7"]
[ext_resource type="AudioStream" uid="uid://0qm6h420kouu" path="res://globals/sfx/mouse_click.wav" id="5_bv1ly"]
[ext_resource type="Texture2D" uid="uid://bsa2yjcsj7e8c" path="res://levels/main_level/sprite_assets/game_title.png" id="6_20lts"]
[ext_resource type="Texture2D" uid="uid://dtov08omxyn7h" path="res://levels/main_level/sprite_assets/menu_background.png" id="7_0lji4"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qhlr6")

[node name="Score" parent="." instance=ExtResource("2_atalm")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8em0r")
autoplay = true

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bv1ly")

[node name="VFlowContainer" type="VFlowContainer" parent="."]
custom_minimum_size = Vector2(0, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -150.0
offset_right = 90.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 30
alignment = 1
last_wrap_alignment = 2

[node name="Play" type="Button" parent="VFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = ExtResource("4_ie4v7")
theme_override_styles/pressed = ExtResource("4_ie4v7")
theme_override_styles/normal = ExtResource("4_ie4v7")
text = "Play"

[node name="Exit" type="Button" parent="VFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = ExtResource("4_ie4v7")
theme_override_styles/pressed = ExtResource("4_ie4v7")
theme_override_styles/normal = ExtResource("4_ie4v7")
text = "Exit"

[node name="ResetScore" type="Button" parent="VFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = ExtResource("4_ie4v7")
theme_override_styles/pressed = ExtResource("4_ie4v7")
theme_override_styles/normal = ExtResource("4_ie4v7")
text = "Reset Score"

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -252.089
offset_top = 14.9831
offset_right = 2275.91
offset_bottom = 974.983
grow_horizontal = 2
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_20lts")

[node name="Background" type="TextureRect" parent="."]
z_index = -99
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.429
offset_top = -395.563
offset_right = 543.571
offset_bottom = 1004.44
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture = ExtResource("7_0lji4")

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="pressed" from="VFlowContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VFlowContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VFlowContainer/ResetScore" to="." method="_on_reset_score_pressed"]
